--- a/app/src/main/res/layout/content_deuda.xml
+++ b/app/src/main/res/layout/content_deuda.xml
@@ -158,5 +158,58 @@
         app:layout_constraintStart_toEndOf="@id/guideline_tres"
         android:text=""/>
 
+    <LinearLayout
+        android:id="@+id/linearLayout2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:background="@color/colorPrimaryDark"
+        app:layout_constraintTop_toBottomOf="@id/text_operacion"
+        >
+
+        <Button
+            android:id="@+id/button_listado"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:layout_marginTop="10dp"
+            app:layout_constraintTop_toBottomOf="@id/text_operacion"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:text="Listado"
+            />
+        <Button
+            android:id="@+id/button_pagar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:layout_marginTop="10dp"
+            app:layout_constraintTop_toBottomOf="@id/text_operacion"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:text="Pagar"
+            />
+        <Button
+            android:id="@+id/button_confirmar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:layout_marginTop="10dp"
+            app:layout_constraintTop_toBottomOf="@id/text_operacion"
+            app:layout_constraintStart_toStartOf="@id/text_operacion"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:text="Confirmar"
+            />
+    </LinearLayout>
+    <TextView
+        android:id="@+id/text_mensaje_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/margin"
+        app:layout_constraintTop_toBottomOf="@id/linearLayout2"
+        app:layout_constraintStart_toStartOf="parent"
+        android:textStyle="bold"
+        android:textColor="#ff0000"
+        android:text=""/>
 
 </android.support.constraint.ConstraintLayout>
