--- a/app/src/main/res/layout/content_deuda.xml
+++ b/app/src/main/res/layout/content_deuda.xml
@@ -166,17 +166,6 @@
         >
 
         <Button
-            android:id="@+id/button_listado"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="10dp"
-            android:layout_marginTop="10dp"
-            app:layout_constraintTop_toBottomOf="@id/text_operacion"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:text="Listado"
-            />
-        <Button
             android:id="@+id/button_pagar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -185,7 +174,7 @@
             app:layout_constraintTop_toBottomOf="@id/text_operacion"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:text="Pagar"
+            android:text="@string/pagar"
             />
         <Button
             android:id="@+id/button_confirmar"
